--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+@import "./variables.css";
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Noto Serif", serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: var(--primary-text-color);
+}
+
+.header {
+  width: 100%;
+  background-color: var(--primary-color);
+  text-align: center;
+  padding: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.header h1 {
+  margin-bottom: 3%;
+  color: var(--text-color);
+}
+
+.header form {
+  width: 50vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.header input {
+  flex-grow: 2;
+}
+.header button {
+  flex-grow: 1;
+}
+
+.header input,
+.header button {
+  padding: 2%;
+  border: none;
+}
+
+.recipeList {
+  width: 80vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: stretch;
+}
+
+@media (max-device-width: 700px) {
+  .header {
+    font-size: 3em;
+    padding: 20% 10%;
+  }
+
+  .header form {
+    width: 90%;
+  }
+
+  .header input,
+  .header button {
+    font-size: 1em;
+  }
+
+  .recipeList {
+    width: 100%;
+  }
 }
