--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,33 @@
   align-content: stretch;
 }
 
+.credit {
+  margin: 20px;
+  border: 5px solid var(--dark-primary-color);
+  background-color: white;
+  padding: 5%;
+  font-size: 1em;
+  text-align: center;
+  color: var(--primary-text-color);
+}
+
+.credit a {
+  text-decoration: none;
+  transition: all 500ms ease;
+  color: var(--dark-primary-color);
+}
+
+.credit a:active,
+.credit a:visited {
+  color: var(--primary-color);
+}
+
+.credit a:hover {
+  color: var(--dark-primary-color);
+  text-decoration: underline;
+  transition: all 500ms ease;
+}
+
 @media (max-device-width: 700px) {
   .header {
     font-size: 3em;
