--- a/src/variables.css
+++ b/src/variables.css
@@ -4,7 +4,7 @@
   --dark-primary-color: #d32f2f;
   --background: #ffcdd2;
   --text-color: #ffffff;
-  --primary-text-color: ##212121;
+  --primary-text-color: #212121;
   --seconary-text-color: #757575;
   --recipe-margin: 10% 0;
   --border-radius: 5%;
